objects/EUR_CRM_Note__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit (EU)</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Notes (EU)</relationshipLabel>
        <relationshipName>Notes_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>Note-{000000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>